updated link to repo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul id="links" class="links">
         <li><a class="who" href="http://twitter.com/msurguy" target="_blank">by msurguy</a></li>
         <li><a class="blog" href="http://maxoffsky.com" target="_blank">Blog post</a></li>
-        <li><a class="source" href="https://github.com/wagerfield/flat-surface-shader" target="_blank">GitHub</a></li>
+        <li><a class="source" href="https://github.com/msurguy/triangles" target="_blank">GitHub</a></li>
       </ul>
 
     </div>
