--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html>
   <head>
-
     <meta charset="utf-8"/>
-    <title>FSS | Canvas Basic Example</title>
+    <title>Delaunay triangle pattern maker</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
