--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <div id="controls" class="controls">
     </div>
     
-    <script src="js/triangles.js"></script>
+    <script src="js/triangles.min.js"></script>
   </body>
 </html>
