--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="output" class="container">
       </div>
       <ul id="links" class="links">
+        <p>Press space to drop or pick up the light. Enter key to add another one</p>
         <li><a class="who" href="http://twitter.com/msurguy" target="_blank">by msurguy</a></li>
         <li><a class="blog" href="http://maxoffsky.com" target="_blank">Blog post</a></li>
         <li><a class="source" href="https://github.com/msurguy/triangles" target="_blank">GitHub</a></li>
