Added link to the blog post

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <ul id="links" class="links">
         <p>Press space to drop or pick up the light. Enter key to add another one</p>
         <li><a class="who" href="http://twitter.com/msurguy" target="_blank">by msurguy</a></li>
-        <li><a class="blog" href="http://maxoffsky.com" target="_blank">Blog post</a></li>
-        <li><a class="source" href="https://github.com/msurguy/triangles" target="_blank">GitHub</a></li>
+        <li><a class="blog" href="http://maxoffsky.com/maxoffsky-blog/free-wallpapers-generator-delaunay-triangulation-patterns/" target="_blank">Blog post</a></li>
+        <li><a class="source" href="https://github.com/msurguy/triangles" target="_blank">Source</a></li>
       </ul>
 
     </div>
