--- a/examples/playground/index.html
+++ b/examples/playground/index.html
@@ -3,9 +3,9 @@
   <title>triangles.js - playground</title>
   <meta charset='utf-8'/>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
-  <link rel='stylesheet' href='./examples/playground/index.css'/>
-  <script type='text/javascript' src='./js/triangles.js'></script>
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet"> 
+  <link rel='stylesheet' href='./index.css'/>
+  <script type='text/javascript' src='../../js/triangles.js'></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -51,5 +51,5 @@
   </div>
   <div id='container'></div>
   <div id='controls'></div>
-  <script type='text/javascript' src='./examples/playground/index.js'></script>
+  <script type='text/javascript' src='./index.js'></script>
 </body>
